# nevodServer

./: CMakeLists.txt  README.md  specification.txt
clientModule/: eas_client.py
src/: CMakeLists.txt  main.cpp
src/configparsers/: CMakeLists.txt  configrecord.hpp  serverconfig.cpp  serverconfig.hpp  stationconfig.cpp  stationconfig.hpp
src/eas/: #client.hpp#  CMakeLists.txt  adc.cpp  adc.hpp  client.cpp  client.hpp  easstation.cpp  easstation.hpp  host.cpp  host.hpp  hostclient.cpp  hostclient.hpp  master.cpp  master.hpp  queueofmessages.cpp  queueofmessages.hpp  realclient.cpp  realclient.hpp  realmaster.cpp  realmaster.hpp  realqueueofmessages.cpp  realqueueofmessages.hpp  registers.cpp  registers.hpp
src/observer/: CMakeLists.txt  observer.cpp  observer.hpp
src/rpcserver/: CMakeLists.txt  dispatcher.cpp  dispatcher.hpp  easrpc.cpp  easrpc.hpp  fault.hpp  formathandler.hpp  json.hpp  jsonformathandler.cpp  jsonformathandler.hpp  jsonreader.cpp  jsonreader.hpp  jsonwriter.cpp  jsonwriter.hpp  reader.hpp  request.cpp  request.cpp.autosave  request.hpp  response.cpp  response.hpp  rpcserver.cpp  rpcserver.hpp  server.cpp  server.hpp  tcpconnection.cpp  tcpconnection.hpp  uranrpc.cpp  uranrpc.hpp  util.cpp  util.hpp  value.cpp  value.hpp  writer.hpp
src/server/: CMakeLists.txt  easrpc.cpp  easrpc.hpp  rpcserver.cpp  rpcserver.hpp  server.cpp  server.hpp  uranrpc.cpp  uranrpc.hpp
src/server/rpcserver/: CMakeLists.txt  dispatcher.cpp  dispatcher.hpp  fault.hpp  json.hpp  jsonconstants.hpp  jsonformathandler.cpp  jsonformathandler.hpp  jsonreader.cpp  jsonreader.hpp  jsonwriter.cpp  jsonwriter.hpp  request.cpp  request.hpp  response.cpp  response.hpp  rpcserver.cpp  rpcserver.hpp  server.cpp  server.hpp  tcpconnection.cpp  tcpconnection.hpp  tcpcontrolconnection.cpp  tcpcontrolconnection.hpp  tcpdataconnection.cpp  tcpdataconnection.hpp  value.cpp  value.hpp
src/uran/: CMakeLists.txt  uranstation.cpp  uranstation.hpp
tests/: CMakeLists.txt  eas.cpp  eas.cpp.autosave  queueofmessages.cpp  rpcserver.cpp
tests/mocks/: CMakeLists.txt  clientfake.hpp  clientfake.hpp.autosave  clientmock.hpp  clienttorpcserver.cpp  clienttorpcserver.hpp  hostmock.hpp
tests/testclasses/: CMakeLists.txt  rpcservertest.cpp  rpcservertest.hpp  tcpconnectiontest.cpp  tcpconnectiontest.hpp
